feat: implementação do artista