@@ -1,7 +1,10 @@
 package br.gov.mt.seplag.seletivo.ArtistHub.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import br.gov.mt.seplag.seletivo.ArtistHub.dto.artista.ArtistaRequestDTO;
@@ -10,10 +13,8 @@ import br.gov.mt.seplag.seletivo.ArtistHub.mapper.ArtistaMapper;
 import br.gov.mt.seplag.seletivo.ArtistHub.model.Artista;
 import br.gov.mt.seplag.seletivo.ArtistHub.repository.ArtistaRepository;
 import jakarta.persistence.EntityNotFoundException;
-import jakarta.transaction.Transactional;
+import org.springframework.transaction.annotation.Transactional;
 import lombok.AllArgsConstructor;
-
-import org.springframework.data.domain.Sort;
 
 @AllArgsConstructor
 @Service
@@ -21,11 +22,8 @@ public class ArtistaService {
     private final ArtistaRepository repository;
     private final ArtistaMapper mapper;
 
-    public List<ArtistaResponseDTO> findAll(String nome, Sort sort) {
-        if (nome != null && !nome.isBlank()) {
-            return repository.findByNomeContainingIgnoreCase(nome, sort).stream().map(mapper::toDTO).toList();
-        }
-       return repository.findAll(sort).stream().map(mapper::toDTO).toList();
+    public List<ArtistaResponseDTO> findAll() {
+       return repository.findAll().stream().map(mapper::toDTO).collect(Collectors.toList());
     }
 
     public ArtistaResponseDTO save(ArtistaRequestDTO dto) {
@@ -34,13 +32,27 @@ public class ArtistaService {
         return mapper.toDTO(entity);
     }
 
+    @Transactional(readOnly = true)
+    public ArtistaResponseDTO getById(Long id) {
+        var entity = repository.findById(id)
+            .orElseThrow(() -> new EntityNotFoundException("Artista não encontrado"));
+        return mapper.toDTO(entity);
+    }
+
+    @Transactional
+    public void delete(Long id) {
+        if (!repository.existsById(id)) {
+            throw new EntityNotFoundException("Artista não encontrado");
+        }
+        repository.deleteById(id);
+    }
+
     @Transactional
     public ArtistaResponseDTO update(Long id, ArtistaRequestDTO dto) {
-
         Artista artista = repository.findById(id)
             .orElseThrow(() -> new EntityNotFoundException("Artista não encontrado"));
 
-            artista.setNome(dto.getNome());
+        artista.setNome(dto.getNome());
         
         return mapper.toDTO(artista);
     }
